# mnemon

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  install-hooks.sh  install.ps1  install.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
git-hooks/: post-commit  post-merge
knowledge/: log.md
knowledge/guides/: index.md  release-setup.md
knowledge/processes/: index.md  release.md
mnemon/: cli.py  server.py
mnemon/commands/: __init__.py  _utils.py
mnemon/contracts/: __init__.py  graph_contracts.py  memory_contracts.py  project_contracts.py  registry.py
mnemon/core/: constants.py  context.py  git.py  graph.py  memory.py  projects.py
mnemon/db/: connection.py
src/mnemon/: __main__.py  cli.py
src/mnemon/commands/: __init__.py  _utils.py
src/mnemon/contracts/: graph_contracts.py  project_contracts.py  registry.py
src/mnemon/core/: constants.py  graph.py
src/mnemon/db/: migrations.py
src/mnemon/skill/: SKILL.md
tests/: conftest.py  test_contracts.py  test_coverage_gap.py  test_server.py
tests/samples/: __init__.py  complex_graph.sql  empty.sql  malformed_input.txt  simple_entity.sql  simple_session.json
tests/test_cli/: test_behavior.py  test_commands.py
tests/test_core/: test_constants.py  test_context.py  test_git.py  test_graph.py  test_memory.py  test_projects.py
tests/test_db/: test_connection.py  test_migrations.py
