[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemon"
version = "0.1.0"
description = "Persistent project memory and knowledge graph for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Paul Cruz", email = "paulushcgcj@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "memory",
    "ai",
    "context",
    "persistent",
    "mcp",
    "coding-agent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
mnemon = "mnemon.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mnemon"]

[tool.uv]
package = true
