[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemonn"
version = "0.1.0"
description = "Persistent project memory and knowledge graph for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Paul Cruz", email = "paulushcgcj@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = [
    "memory",
    "ai",
    "context",
    "persistent",
    "mcp",
    "coding-agent",
    "knowledge-graph",
    "sqlite",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
cli = [
    "mcp[cli]>=1.3.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
mnemon = "mnemon.cli:cli"

[project.urls]
Homepage = "https://github.com/paulushcgcj/mnemon"
Documentation = "https://github.com/paulushcgcj/mnemon#readme"
Repository = "https://github.com/paulushcgcj/mnemon"
"Bug Tracker" = "https://github.com/paulushcgcj/mnemon/issues"
Changelog = "https://github.com/paulushcgcj/mnemon/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemon"]

[tool.hatch.build.targets.wheel.shared-data]
"src/mnemon/skill" = "share/mnemon/skill"

[tool.uv]
package = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosqlite.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["mnemon"]

[tool.coverage.run]
branch = true
source = ["src/mnemon"]
omit = [
    "src/mnemon/__main__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "except CLIError as e:",
    "handle_cli_error(e)",
    "except Exception as e:",
    "if format == .json.:",
    "import json",
    "output = .No projects found..",
    "output = .Nothing to prune..",
    "output = f.No children found for project",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyright>=1.1.410",
    "ruff>=0.15.19",
    "pyinstaller",
]
